edit links for css and JS

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Fontawesome LINK -->
-    <link rel="stylesheet" href="/public/css/all.min.css" />
+    <link rel="stylesheet" href="./public/css/all.min.css" />
     <!-- CSS LINK -->
-    <link rel="stylesheet" href="/public/css/style.css" />
+    <link rel="stylesheet" href="./public/css/style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -63,6 +63,6 @@
     </div>
     <button class="print"><i class="fa-solid fa-print"></i></button>
     <!-- JS Link -->
-    <script type="module" src="/public/js/script.js"></script>
+    <script type="module" src="./public/js/script.js"></script>
   </body>
 </html>
